--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="base_url">https://maps.googleapis.com</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="api_key">AIzaSyBg8RtAbXyLYcRpQOe2KPwCuNNvW-Rrq70</string>
 </resources>
